--- a/src/components/QuanTriVien/QuanLyHangTonKho.css
+++ b/src/components/QuanTriVien/QuanLyHangTonKho.css
@@ -1,4 +1,4 @@
-.AllLichTrinh {
+.danhSachHang {
   margin-left: 70px;
   position: relative;
 }
@@ -7,12 +7,12 @@
   margin-left: -35px;
 }
 
-.productsCate__admin {
+.danhSachHang__admin {
   position: absolute;
   left: -30px;
 }
 
-.productsCate__admin__item {
+.danhSachHang__admin__item {
   width: 300px;
   margin-right: 100px;
   margin-bottom: 25px;
@@ -20,18 +20,18 @@
 
 .products__admin_name {}
 
-.btnAddProductCate {
+.btnThemHang {
   margin-top: 60px;
   margin-left: -35px;
   border: 1px #0866FF solid;
 }
 
-.btnAddProductCate:hover {
+.btnThemHang:hover {
   background: #0866FF;
   border: 1px black solid;
 }
 
-.btnAddProductCate:hover span {
+.btnThemHang:hover span {
   color: #fff;
 }
 
