--- a/src/NhanVien/QuanLyHangTonKho2.css
+++ b/src/NhanVien/QuanLyHangTonKho2.css
@@ -44,6 +44,15 @@
   display: flex;
 }
 
+.two-button Button {
+  margin-right: 10px;
+}
+
+
+.btnChiTiet {
+  margin-right: 10px;
+}
+
 .btnXuatKho {
   margin-right: 10px;
 }
